--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -23,5 +23,10 @@
             </intent-filter>
         </activity>
     </application>
+    
+    <instrumentation android:name="android.test.InstrumentationTestRunner"
+    android:targetPackage="your.package"
+    android:label="your tests label" />
+    android:name="android.test.runner" />
 
 </manifest>
