--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -5,14 +5,21 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="14"
-        android:targetSdkVersion="16" />
+        android:minSdkVersion="8"
+        android:targetSdkVersion="17" />
+    
+    <instrumentation 
+    android:name="android.test.InstrumentationTestRunner"
+    android:targetPackage="com.example.movietracker"
+     />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <uses-library 
+            android:name="android.test.runner" />
         <activity
             android:name="com.example.movietracker.MainMovieView"
             android:label="@string/app_name" >
@@ -24,9 +31,6 @@
         </activity>
     </application>
     
-    <instrumentation android:name="android.test.InstrumentationTestRunner"
-    android:targetPackage="your.package"
-    android:label="your tests label" />
-    android:name="android.test.runner" />
+    
 
 </manifest>
