changed the jar files around so that they work properly

--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry exported="true" kind="lib" path="json-simple-1.1.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/Oliver/Downloads/google-gson-2.2.4-release/google-gson-2.2.4/gson-2.2.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="gson-2.2.4.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
