--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,6 +12,7 @@
     android:name="android.test.InstrumentationTestRunner"
     android:targetPackage="com.example.movietracker"
      />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
