--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,7 +22,16 @@
         <uses-library 
             android:name="android.test.runner" />
         <activity
-            android:name="com.example.movietracker.MainMovieView"
+            android:name="com.example.movietracker.MainMovieActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.example.movietracker.DetailedMovieActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
