--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -5,8 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="17" />
+        android:minSdkVersion="8" />
     
     <instrumentation 
     android:name="android.test.InstrumentationTestRunner"
